<resources>
    <string name="app_name">苏苏.微博</string>

    <string name="hint_click_into_app">点击进入</string>

    <string name="tabbar_text_home">首页</string>
    <string name="tabbar_text_message">消息</string>
    <string name="tabbar_text_publish">发布</string>
    <string name="tabbar_text_discover">发现</string>
    <string name="tabbar_text_user">我</string>

    <string name="nav_home_text_left">注册</string>
    <string name="nav_home_text_center">@string/tabbar_text_home</string>
    <string name="nav_home_text_right">登录</string>

    <string name="nav_message_text_left">发现群</string>
    <string name="nav_message_text_center">@string/tabbar_text_message</string>
    <string name="nav_message_text_right">雷达</string>

    <string name="status_forword_text">转发</string>
    <string name="status_comment_text">评论</string>
    <string name="status_like_text">点赞</string>

    <string name="publish_send_video_text">发视频</string>
    <string name="publish_send_picture_text">图片/视频</string>
    <string name="publish_send_text_text">头条文章</string>
    <string name="publish_send_voice_text">签到</string>
    <string name="publish_send_moderated_text">点评</string>
    <string name="publish_send_link_text">音乐</string>
    <string name="publish_send_cancel_text">取消</string>

    <string name="compose_cancel_text">取消</string>
    <string name="compose_send_weibo_text">发微博</string>
    <string name="compose_send_text">发送</string>


</resources>
