<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 Sogrey [https://github.com/Sogrey/WeiBo].
  ~ IDE:Android Studio 2.1.1 + JDK 1.8
  ~ QQ:408270653
  ~ 仅供学习交流
  ~ Copyright (c) Sogrey, All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/white"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_header"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/dimen_12_dip"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_8_dip"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="热点追踪"
                android:textColor="@color/app_text_orage_color"
                android:textSize="@dimen/dimen_15_sp"/>

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="05-26 11:48:58"
                android:textSize="@dimen/dimen_12_sp"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_10_dip"
        android:layout_marginRight="@dimen/dimen_10_dip"
        android:layout_marginTop="@dimen/dimen_5_dip"
        android:textSize="@dimen/dimen_16_sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimen_10_dip">

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--        <org.sogrey.weibo.pro.modular.home.view.HomeGridView
                    android:id="@+id/gv_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_10_dip"
                    android:layout_marginRight="@dimen/dimen_10_dip"
                    android:horizontalSpacing="@dimen/dimen_5_dip"
                    android:numColumns="3"
                    android:scrollbars="none"
                    android:stretchMode="columnWidth"
                    android:visibility="gone"
                    android:verticalSpacing="@dimen/dimen_5_dip" />-->
        <org.sogrey.views.ninegridview.NineGridlayout
            android:id="@+id/iv_ngrid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_8_dip"
            android:layout_marginLeft="@dimen/dimen_16_dip"
            android:layout_marginRight="@dimen/dimen_16_dip"
            android:layout_marginTop="@dimen/dimen_8_dip"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1_dip"
        android:background="@color/line_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_forword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_forword"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/statusdetail_icon_retweet"/>

            <TextView
                android:id="@+id/tv_forword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5_dip"
                android:text="@string/status_forword_text"/>

        </LinearLayout>

        <View
            android:layout_width="@dimen/dimen_1_dip"
            android:layout_height="@dimen/dimen_20_dip"
            android:background="@drawable/statusdetail_comment_line"/>


        <LinearLayout
            android:id="@+id/ll_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_comment"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/statusdetail_icon_comment"/>

            <TextView
                android:id="@+id/tv_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5_dip"
                android:text="@string/status_comment_text"/>

        </LinearLayout>

        <View
            android:layout_width="@dimen/dimen_1_dip"
            android:layout_height="@dimen/dimen_20_dip"
            android:background="@drawable/statusdetail_comment_line"/>

        <LinearLayout
            android:id="@+id/ll_like"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_dislike"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/statusdetail_icon_like"/>

            <TextView
                android:id="@+id/tv_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5_dip"
                android:text="@string/status_like_text"/>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1_dip"
        android:background="@color/line_color"/>

</LinearLayout>